--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
