--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "cors": "^2.8.5",
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
